Editted template. First published version

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -244,6 +244,10 @@ body:hover .visually-hidden button {
     color: $rss-color;
   }
 
+  .fa-researchgate {
+    color: #5BC7BA;
+  }
+
   .fa-soundcloud {
     color: $soundcloud-color;
   }
