Updated ORCiD logo

--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -233,6 +233,11 @@ body:hover .visually-hidden button {
     color: $linkedin-color;
   }
 
+  .ai-orcid,
+  .ai-orcid-square {
+    color: #AECD54;
+  }
+
   .fa-pinterest,
   .fa-pinterest-p,
   .fa-pinterest-square {
