--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -93,7 +93,7 @@ layout: default
                   {% include resume/projects.liquid %}
                 {% when 'awards' %}
                   {% include resume/awards.liquid %}
-                {% when 'skills' %}
+                {% when 'coding' %}
                   {% include resume/skills.liquid %}
                 {% when 'publications' %}
                   {% include resume/publications.liquid %}
@@ -101,6 +101,8 @@ layout: default
                   {% include resume/presentations.liquid %}
                 {% when 'languages' %}
                   {% include resume/languages.liquid %}
+                {% when 'collaborations' %}
+                  {% include resume/projects.liquid %}
                 {% when 'interests' %}
                   {% include resume/interests.liquid %}
                 {% when 'certificates' %}
