--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -85,7 +85,9 @@ layout: default
                   {% include resume/basics.liquid %}
                 {% when 'education' %}
                   {% include resume/education.liquid %}
-                {% when 'work' %}
+                {% when 'positions' %}
+                  {% include resume/work.liquid %}
+                {% when 'teaching' %}
                   {% include resume/work.liquid %}
                 {% when 'volunteer' %}
                   {% include resume/volunteer.liquid %}
