Add SF intro page

--- a/_includes/video.liquid
+++ b/_includes/video.liquid
@@ -1,6 +1,13 @@
 {% assign extension = include.path | split: '.' | last %}
 
-<figure>
+<figure
+  {% if include.figure_class %}
+    class="{{ include.figure_class }}"
+  {% endif %}
+  {% if include.slot %}
+    slot="{{ include.slot }}"
+  {% endif %}
+>
   {% if extension == 'mp4' or extension == 'webm' or extension == 'ogg' %}
     <video
       src="{% if include.cache_bust %}{{ include.path | relative_url | bust_file_cache }}{% else %}{{ include.path | relative_url }}{% endif %}"
