--- a/_includes/scripts/mathjax.liquid
+++ b/_includes/scripts/mathjax.liquid
@@ -4,7 +4,13 @@
     <script type="text/javascript">
       window.MathJax = {
         tex: {
+          inlineMath: [['$', '$'], ['\\(', '\\)']],
+          displayMath: [['$$', '$$'], ['\\[', '\\]']],
+          processEscapes: true,
           tags: 'ams',
+        },
+        options: {
+          skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code'],
         },
       };
     </script>
