Add NR SF PM paper acceptance

--- a/_layouts/cv.liquid
+++ b/_layouts/cv.liquid
@@ -87,6 +87,8 @@ layout: default
                   {% include resume/education.liquid %}
                 {% when 'positions' %}
                   {% include resume/work.liquid %}
+                {% when 'supervision' %}
+                  {% include resume/supervision.liquid %}
                 {% when 'teaching' %}
                   {% include resume/work.liquid %}
                 {% when 'volunteer' %}
